Stage 2 - Refactor Main - Initialize Database in a separate class

--- a/Car Sharing/Initialization/task-info.yaml
+++ b/Car Sharing/Initialization/task-info.yaml
@@ -218,6 +218,9 @@ files:
 - name: src/carsharing/db/carsharing.mv.db.mv.db
   visible: true
   learner_created: true
+- name: src/carsharing/db/Database.java
+  visible: true
+  learner_created: true
 feedback_link: https://hyperskill.org/projects/140/stages/758/implement#comment
 status: Solved
 feedback:
