--- a/Car Sharing/Companies/task-info.yaml
+++ b/Car Sharing/Companies/task-info.yaml
@@ -809,7 +809,7 @@ files:
 - name: src/carsharing/db/carsharing.mv.db
   visible: true
   learner_created: true
-feedback_link: https://hyperskill.org/projects/140/stages/759/implement#comment
+feedback_link: https://hyperskill.org/learn/step/11502#comment
 status: Solved
 feedback:
   message: Congratulations!
