--- a/Car Sharing/Initialization/task-info.yaml
+++ b/Car Sharing/Initialization/task-info.yaml
@@ -269,7 +269,7 @@ files:
 - name: src/carsharing/DependencyManager.java
   visible: true
   learner_created: true
-feedback_link: https://hyperskill.org/projects/140/stages/758/implement#comment
+feedback_link: https://hyperskill.org/learn/step/11501#comment
 status: Solved
 feedback:
   message: Congratulations!
