--- a/course-remote-info.yaml
+++ b/course-remote-info.yaml
@@ -3,7 +3,7 @@ hyperskill_project:
   ide_files: https://stepik.org/media/attachments/lesson/440790/additional_files.json
   is_template_based: false
   use_ide: true
-update_date: Wed, 27 Jul 2022 11:55:57 UTC
+update_date: Wed, 27 Jul 2022 16:56:01 UTC
 stages:
 - id: 758
   step: 11501
@@ -16,7 +16,7 @@ stages:
   is_completed: true
 - id: 761
   step: 11504
-  is_completed: false
+  is_completed: true
 topics:
   0:
   - title: Write, compile, and run
